Fix project grid layout issue affecting visibility on larger screen sizes

--- a/src/styles/About/Route/Experience.scss
+++ b/src/styles/About/Route/Experience.scss
@@ -60,8 +60,6 @@
   }
 
   &__main-box {
-    max-height: calc(100vh - 8em);   /* fills viewport minus padding, always correct on any screen */
-    overflow-y: auto;
     padding-right: 1em;
     padding-bottom: 3em;
   }
